ops/build/terraform/type04/database/rds/postgres/security_group.tf
resource "aws_security_group" "postgres_db_security" {
  name   = "mss_rds_postgres"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
